Changed names to lambda based functions.  Changed header format.